test/spec_vectors/simd_f64x2_pmin_pmax/fail/module_10.wat
(module (func (result v128) (f64x2.pmax (i32.const 0) (f32.const 0.0))))